<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.dewaal.dan.dwhomecontrol.Control_Radio_Fragment">

    <TableLayout
        android:layout_width="@dimen/controlPanel_half"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="@dimen/button_padding_half">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:text="@string/radio_preset_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_preset_minus"
                android:drawableLeft="@android:drawable/ic_media_previous"
                android:layout_weight="1" />

            <Space
                android:layout_width="@dimen/blank_button_width"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/radio_preset_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_preset_plus"
                android:drawableRight="@android:drawable/ic_media_next"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:text="@string/radio_tune_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_tune_minus"
                android:drawableLeft="@android:drawable/ic_media_rew"
                android:layout_weight="1" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/radio_tune_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_tune_plus"
                android:drawableRight="@android:drawable/ic_media_ff"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.SwitchCompat
                android:layout_height="wrap_content"
                android:id="@+id/sw_am_fm"
                android:textOn="FM"
                android:textOff="AM"
                app:showText="true"
                android:checked="true"
                android:layout_weight="1"
                android:text="Band"
                android:layout_width="wrap_content"
                android:scrollbarSize="@dimen/blank_button_width" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

    </TableLayout>

    <FrameLayout
        android:layout_width="@dimen/controlPanel_half"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/button_padding_half"
            android:layout_gravity="center_horizontal">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:text="@string/preset_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_preset_1" />

                <Button
                    android:text="@string/preset_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_preset_2" />

                <Button
                    android:text="@string/preset_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_preset_3" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:text="@string/preset_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_preset_4" />

                <Button
                    android:text="@string/preset_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_preset_5" />

                <Button
                    android:text="@string/preset_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_preset_6" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:text="@string/preset_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_preset_7" />

                <Button
                    android:text="@string/preset_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_preset_8" />

                <Button
                    android:text="@string/preset_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_preset_9" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:text="@string/preset_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_preset_10"
                    android:layout_span="2"/>
            </TableRow>

        </TableLayout>
    </FrameLayout>

</LinearLayout>
